# camera_pose

./: .gitignore  CMakeLists.txt  README.md
Data/: cookies_ORB.yml
src/: main_detection.cpp  main_registration.c
